--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
 
-	<link rel="icon" href="img/favicon/favicon.jfif">
+	<link rel="icon" href="img/favicon/placehold.png">
 	
 	
 	<!-- Custom Browsers Color Start -->
