--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,11 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	
+
 
 	<link rel="icon" href="img/favicon/placehold.png">
-	
-	
+
+
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#fff">
 	<!-- Custom Browsers Color End -->
@@ -23,13 +23,179 @@
 
 </head>
 
+
 <body>
 
-	<h1>Hello</h1>
+	<header>
+		<div class="top-line">
+			<div class="container">
+				<div class="row">
+					<div class="col phone">
+						<i class="fa fa-phone"></i>
+						1-900-342-9876
+					</div>
 
-<i class="fa fa-facebook"></i>
-	
+					<div class="col">
+						<nav class="soc">
+							<ul>
+								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+								<li><a href="#"><i class="fa fa-google"></i></a></li>
+								<li><a href="#"><i class="fa fa-tumblr"></i></a></li>
+								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="#"><i class="fa fa-rss"></i></a></li>
+							</ul>
+						</nav>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="header-line">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-2 d-none d-lg-block">
+						<a href="#" class="logo"><img src="img/logo.png" alt="logo"></a>
+					</div>
+					<div class="col">
+
+						<div class="mobile-menu-button">
+							<a href="#" class="logo"><img src="img/logo.png" alt="logo"></a>
+						</div>
+
+						<nav class="main-menu top-menu">
+							<ul>
+								<li class="active"><a href="#">home</a></li>
+								<li><a href="#">about</a></li>
+								<li><a href="#">trainers</a></li>
+								<li class="classes">
+									<a href="#">classes</a>
+									<ul>
+										<li><a href="#">Cardio Fitness</a></li>
+										<li><a href="#">Pilates</a></li>
+										<li><a href="#">Aerobics</a></li>
+									</ul>
+								</li>
+								<li><a href="#">blog</a></li>
+								<li><a href="#">pracing</a></li>
+								<li><a href="#">contacts</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</div>
+		</div>
+
+<section class="section-first">
+	<div class="container">
+		<div class="row">
+			<div class="col-12 col-lg-7 offset-lg-5">
+				<h1>Lorem ipsum dolorsit!</h1>
+				<p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br>been the industry's standard dummy </p>
+			</div>
+
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4"><div class="livecontainer"><div><span>Live </span><span>Spinning</span><span>room 2</span></div></div></div>
+					<div class="col-lg-4"><div class="livecontainer"><div><span>Live </span><span>Gym</span><span>room 1</span></div></div></div>
+					<div class="col-lg-4"><div class="livecontainer"><div><span>Live </span><span>Spinning</span><span>room 4</span></div></div></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<second class="second-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-8">
+				<div class="row no-gutters all-classes">
+					<div class="col-lg-6">
+						<ul>
+							<li>Cardio Fitness 
+								<div>
+									<a href="#"><i class='fa fa-calendar-o'></i></a>
+									<a href="#"><i class='fa fa-envelope-o'></i></a>
+									<a href="#"><i class='fa fa-heart-o'></i></a>
+									<a href="#"><i class='fa fa-share'></i></a>
+								</div>
+							</li>
+							<li>Spinning 
+								<div>
+									<a href="#"><i class='fa fa-calendar-o'></i></a>
+									<a href="#"><i class='fa fa-envelope-o'></i></a>
+									<a href="#"><i class='fa fa-heart-o'></i></a>
+									<a href="#"><i class='fa fa-share'></i></a>
+								</div>
+							</li>
+							<li>Pilates 
+								<div>
+									<a href="#"><i class='fa fa-calendar-o'></i></a>
+									<a href="#"><i class='fa fa-envelope-o'></i></a>
+									<a href="#"><i class='fa fa-heart-o'></i></a>
+									<a href="#"><i class='fa fa-share'></i></a>
+								</div>
+							</li>
+							<li>Boxing 
+								<div>
+									<a href="#"><i class='fa fa-calendar-o'></i></a>
+									<a href="#"><i class='fa fa-envelope-o'></i></a>
+									<a href="#"><i class='fa fa-heart-o'></i></a>
+									<a href="#"><i class='fa fa-share'></i></a>
+								</div>
+							</li>
+					</ul>
+				</div>
+					<div class="col-lg-6">
+						<ul>
+							<li>Aerobics 
+								<div>
+									<a href="#"><i class='fa fa-calendar-o'></i></a>
+									<a href="#"><i class='fa fa-envelope-o'></i></a>
+									<a href="#"><i class='fa fa-heart-o'></i></a>
+									<a href="#"><i class='fa fa-share'></i></a>
+								</div>
+							</li>
+							<li>Kik boxing 
+								<div>
+									<a href="#"><i class='fa fa-calendar-o'></i></a>
+									<a href="#"><i class='fa fa-envelope-o'></i></a>
+									<a href="#"><i class='fa fa-heart-o'></i></a>
+									<a href="#"><i class='fa fa-share'></i></a>
+								</div>
+							</li>
+							<li>Crossfit 
+								<div>
+									<a href="#"><i class='fa fa-calendar-o'></i></a>
+									<a href="#"><i class='fa fa-envelope-o'></i></a>
+									<a href="#"><i class='fa fa-heart-o'></i></a>
+									<a href="#"><i class='fa fa-share'></i></a>
+								</div>
+							</li>
+							<li>Yoga 
+								<div>
+									<a href="#"><i class='fa fa-calendar-o'></i></a>
+									<a href="#"><i class='fa fa-envelope-o'></i></a>
+									<a href="#"><i class='fa fa-heart-o'></i></a>
+									<a href="#"><i class='fa fa-share'></i></a>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</second>
+
+
+	</header>
+
+
 	<script src="js/scripts.min.js"></script>
 
 </body>
+
 </html>
