--- a/app/index.html
+++ b/app/index.html
@@ -107,10 +107,11 @@
 	</div>
 </section>
 
-<second class="second-section">
+<section class="second-section">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-8">
+				<h2>All classes</h2>
 				<div class="row no-gutters all-classes">
 					<div class="col-lg-6">
 						<ul>
@@ -186,9 +187,64 @@
 					</div>
 				</div>
 			</div>
+			<div class="col-lg-4 d-md-none d-lg-block">
+				<h2>Membership prices</h2>
+				<div class="membership-prices">
+					<h3>25% Discount for all members</h3>
+					<p>Discount on services and<br>treatments at the GymBase for <br>all membership cards holders.</p>
+					<a href="#" class='button'>more</a>
+				</div>
+			</div>
 		</div>
 	</div>
-</second>
+</section>
+
+
+<section class="thrid-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-xl-4">
+				<h2>Our Trainers</h2>
+				<div class="row no-gutters our-trainers">
+						<div class="col-6"><img src="img/placehold.png" alt="trainer">
+							<div class="name">Rebecca Smith</div>
+							<span>spinning</span>
+							<p>Creating the perfect body is no small matter.</p>
+							<div class="like-trainers">
+									<a href="#"><i class="fa fa-heart"></i></a>
+									<a href="#"><i class="fa fa-thumbs-up"></i></a>
+								</div>
+							<div class="soc-trainers">
+									<a href="#"><i class="fa fa-twitter"></i></a>
+									<a href="#"><i class="fa fa-facebook"></i></a>
+								</div>
+							</div>
+						<div class="col-6"><img src="img/placehold.png" alt="trainer">
+							<div class="name">John Jones</div>
+							<span>Kik boxing</span>
+							<p>Creating the perfect body is no small matter.</p>
+							<div class="like-trainers">
+								<a href="#"><i class="fa fa-heart"></i></a>
+								<a href="#"><i class="fa fa-thumbs-up"></i></a>
+							</div>
+							<div class="soc-trainers">
+									<a href="#"><i class="fa fa-twitter"></i></a>
+									<a href="#"><i class="fa fa-facebook"></i></a>
+							</div>
+						</div>
+				</div>
+			</div>
+			<div class="col-xl-4">
+				<h2>Next Event</h2>
+				<div class="next-event"></div>
+			</div>
+			<div class="col-xl-4">
+				<h2>From the blog</h2>
+				<div class="from-the-blog"></div>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 	</header>
