--- a/app/index.html
+++ b/app/index.html
@@ -374,9 +374,34 @@
 		</div>
 	</section>
 
-	
+	<section class="fourth-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-sm-12 d-none d-sm-block">
+					<h2>Gallery</h2>
+					<div class="gallery owl-carousel">
+						<img src="img/asd.png" alt="women">
+						<img src="img/qwe.png" alt="women">
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-12 d-none d-sm-block">
+					<h2>Partner</h2>
+						<div class="partner row no-gutters align-items-center">
+							<div class="col-lg-6 col-3"><img src="img/nike.png" alt="nike"></div>
+							<div class="col-lg-6 col-3"><img src="img/adidas.png" alt="adidas"></div>
+							<div class="col-lg-6 col-3"><img src="img/puma.png" alt="puma"></div>
+							<div class="col-lg-6 col-3"><img src="img/rebook.png" alt="rebook"></div>
+							<div class="col-lg-6 col-6"><img src="img/speedo.png" alt="speedo"></div>
+							<div class="col-lg-6 col-6"><img src="img/jaked.png" alt="jaked"></div>
+						</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-
+<section class="fifth-section">
+	<div class="map"><img src="/img/maps.png" alt="map"></div>
+</section>
 
 	<script src="js/scripts.min.js"></script>
 
