--- a/app/home.html
+++ b/app/home.html
@@ -27,7 +27,7 @@
 <body>
 
 	<header>
-		<div class="top-line">
+		<div class="soc-line">
 			<div class="container">
 				<div class="row">
 					<div class="col phone">
@@ -386,22 +386,129 @@
 				</div>
 				<div class="col-lg-4 col-sm-12 d-none d-sm-block">
 					<h2>Partner</h2>
-						<div class="partner row no-gutters align-items-center">
-							<div class="col-lg-6 col-3"><img src="img/nike.png" alt="nike"></div>
-							<div class="col-lg-6 col-3"><img src="img/adidas.png" alt="adidas"></div>
-							<div class="col-lg-6 col-3"><img src="img/puma.png" alt="puma"></div>
-							<div class="col-lg-6 col-3"><img src="img/rebook.png" alt="rebook"></div>
-							<div class="col-lg-6 col-6"><img src="img/speedo.png" alt="speedo"></div>
-							<div class="col-lg-6 col-6"><img src="img/jaked.png" alt="jaked"></div>
-						</div>
+					<div class="partner row no-gutters align-items-center">
+						<div class="col-lg-6 col-3"><img src="img/nike.png" alt="nike"></div>
+						<div class="col-lg-6 col-3"><img src="img/adidas.png" alt="adidas"></div>
+						<div class="col-lg-6 col-3"><img src="img/puma.png" alt="puma"></div>
+						<div class="col-lg-6 col-3"><img src="img/rebook.png" alt="rebook"></div>
+						<div class="col-lg-6 col-6"><img src="img/speedo.png" alt="speedo"></div>
+						<div class="col-lg-6 col-6"><img src="img/jaked.png" alt="jaked"></div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-<section class="fifth-section">
-	<div class="map"><img src="/img/maps.png" alt="map"></div>
-</section>
+	<section class="fifth-section">
+		<div class="container-fluid map">
+			<div class="row">
+				<div class="container">
+					<div class="row justify-content-end">
+						<div class="col-12 col-lg-4 col-md-6">
+							<div class="opening-hourse">
+								<h3>Opening <span>Hours</span></h3>
+								<ul>
+									<li>Monday <span>h. 6:00-h. 24:00</span></li>
+									<li>Tuesday <span>h. 6:00-h. 24:00</span></li>
+									<li>Wednesday <span>h. 6:00-h. 24:00</span></li>
+									<li>Thursday <span>h. 6:00-h. 24:00</span></li>
+									<li>Friday <span>h. 6:00-h. 24:00</span></li>
+									<li>Saturday <span>h. 6:00-h. 24:00</span></li>
+									<li>Sunday <span>h. 6:00-h. 24:00</span></li>
+								</ul>
+								<p>Nam vestibulum, arcu sodales feugiat consectetur, nisl orci bibendum elit.</p>
+								<span>Enjoy it!</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="sixth-section">
+		<div class="container-fluid">
+			<div class="row justify-content-center align-items-center">
+				<a href="#"><i class="fa fa-twitter"></i></a>
+				<p>RT @collis: Trade growth ideas with other founders. Look for
+					ways to cross promote. Small startups<br> today may be big friends later. (9/10) <span>2 days ago</span></p>
+			</div>
+		</div>
+	</section>
+
+
+
+	<footer class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 d-none d-md-block signup">
+					<h4>Newsletter signup</h4>
+					<p>Sign up for our newsletter<br> and get the latest news.</p>
+					<form action="#">
+						<input type="text" placeholder="insert email">
+						<button class="btn">Submit email</button>
+					</form>
+				</div>
+
+				<div class="col-md-4 col-sm-6 info">
+					<img src="img/logo.png" alt="logo">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque
+						urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec .</p>
+					<div><span>Phone:</span> 1-900-342-9876</div>
+					<div><span>e-mail:</span> info@gymsports.com</div>
+
+				</div>
+				<div class="col-md-2 col-sm-3 footer-menu">
+					<h4>Menu</h4>
+					<ul>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Trainers</a></li>
+						<li><a href="#">Classes</a></li>
+						<li><a href="#">Pricing</a></li>
+						<li><a href="#">Privacy</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</div>
+				<div class="col-md-2 col-sm-3 community">
+					<h4>Community</h4>
+					<ul>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Forum</a></li>
+						<li><a href="#">Support</a></li>
+						<li><a href="#"></a>Newsletter</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<footer>
+			<div class="soc-line">
+					<div class="container">
+						<div class="row">
+							<div class="col copyright">
+								<i class="fa fa-copyright"></i>
+								2013 GYMSports
+							</div>
+		
+							<div class="col">
+								<nav class="soc">
+									<ul>
+										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+										<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+										<li><a href="#"><i class="fa fa-google"></i></a></li>
+										<li><a href="#"><i class="fa fa-tumblr"></i></a></li>
+										<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+										<li><a href="#"><i class="fa fa-rss"></i></a></li>
+									</ul>
+								</nav>
+							</div>
+		
+						</div>
+					</div>
+				</div>
+	</footer>
 
 	<script src="js/scripts.min.js"></script>
 
